# lapd-shootings

./: .gitignore  README.md  pyproject.toml
data/interim/: lapd_ois_transcripts.json  lapd_ois_videos.json
data/processed/: lapd_ois_cases.csv  lapd_ois_cases.json  lapd_ois_cases_by_year.csv
data/raw/: lapd_videos.json
src/lapd_shootings/: __init__.py  __main__.py  cli.py  config.py  parse.py  storage.py  transcripts.py  visualize.py  youtube.py
tests/: test_parse.py  test_transcripts.py  test_visualize.py
