[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lapd-shootings"
version = "0.1.0"
description = "Fetch and analyze LAPD officer-involved shooting briefing videos."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
  "altair>=5.0",
  "google-api-python-client>=2.0",
  "pandas>=2.0",
  "requests>=2.0",
  "vl-convert-python>=1.0",
  "youtube-transcript-api>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.9",
]

[project.scripts]
lapd-shootings = "lapd_shootings.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lapd_shootings"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
